--- a/app/src/main/res/menu/home_activity_drawer.xml
+++ b/app/src/main/res/menu/home_activity_drawer.xml
@@ -9,5 +9,8 @@
         <item android:id="@+id/nav_capitals"
             android:icon="@android:drawable/ic_menu_gallery"
             android:title="Capital" />
+        <item android:id="@+id/nav_cards"
+            android:icon="@android:drawable/ic_menu_gallery"
+            android:title="Cards" />
     </group>
 </menu>
